--- a/src/main/resources/templates/home/edit.html
+++ b/src/main/resources/templates/home/edit.html
@@ -21,27 +21,27 @@
         </tr>
         <tr>
             <td>사진</td>
-            <td><input type="text" th:value="${home.photo}"></td>
+            <td><input type="text" name="photo" th:value="${home.photo}"></td>
         </tr>
         <tr>
             <td>설명</td>
-            <td><input type="text" th:value="${home.description}"></td>
+            <td><input type="text" name="description" th:value="${home.description}"></td>
         </tr>
         <tr>
             <td>최대인원</td>
-            <td><input type="text" th:value="${home.guest}"></td>
+            <td><input type="text" name="guest" th:value="${home.guest}"></td>
         </tr>
         <tr>
             <td>침실 수</td>
-            <td><input type="text" th:value="${home.room}"></td>
+            <td><input type="text" name="room" th:value="${home.room}"></td>
         </tr>
         <tr>
             <td>침대 수</td>
-            <td><input type="text" th:value="${home.bed}"></td>
+            <td><input type="text" name="bed" th:value="${home.bed}"></td>
         </tr>
         <tr>
             <td>욕실 수</td>
-            <td><input type="text" th:value="${home.bathroom}"></td>
+            <td><input type="text" name="bathroom" th:value="${home.bathroom}"></td>
         </tr>
         <tr>
             <td>편의시설</td>
