숙소 사진(파일) 처리

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <body class="main">
     <a href="/home/add">추가</a>
 
-    <img th:src="@{C:/Users/shjan/OneDrive/바탕 화면/airbnb/src/main/resources/images/20211018/186261133211300.jpg}">
+    <img th:src="@{\images\20211018\191715445828400.jpg}">
     <table>
         <tr>
             <td>숙소명</td>
