--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,13 +3,16 @@ header {
     position: fixed;
     width:100%;
     height:80px;
-    line-height:80px;
     padding:10px 80px;
     box-sizing: border-box;
+    -o-transition:all 0.5s ease; -moz-transition:all 0.5s ease; -ms-transition:all 0.5s ease; -webkit-transition:all 0.5s ease;
 }
 .header-container {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
     max-width: 1440px;
-    margin:0 auto;
     position: relative;
 }
 .header-container .logo {
@@ -82,6 +85,7 @@ header {
     margin:0 12px;
     padding:0 8px 1px 13px;
     vertical-align: middle;
+    border:1px solid #ddd;
 }
 .header-container .subMenu > li:last-child::after {
     display: block;
@@ -99,6 +103,15 @@ header {
 .header-container .subMenu > li:last-child .person {
     font-size:28px;
     color:#717171;
+}
+
+/* header-스크롤 */
+header.scroll {
+    background:#fff;
+    border-bottom:1px solid #eee;
+}
+header.scroll .header-container .subMenu > li > a {
+    color:#222;
 }
 
 
@@ -138,6 +151,7 @@ header {
     float:left;
     width:calc(25% - 11.25px);
     margin-right:15px;
+    cursor: pointer;
 }
 .page02 .page-container .list > li:last-child {
     margin-right:0;
