Home에 price(비용)필드 추가

--- a/src/main/resources/templates/home/add.html
+++ b/src/main/resources/templates/home/add.html
@@ -40,6 +40,10 @@
                 <td><input type="text" name="bathroom"></td>
             </tr>
             <tr>
+                <td>비용</td>
+                <td><input type="text" name="price"></td>
+            </tr>
+            <tr>
                 <td>편의시설</td>
                 <td>
                     <label th:each="facilite : ${facilites}">
