--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -43,10 +43,10 @@ header {
 .home-list > li {
     float:left;
     width:calc(20% - 24px);
-    margin-right:30px;
     cursor: pointer;
+    margin:0 30px 30px 0;
 }
-.home-list > li:last-child {
+.home-list > li:nth-child(5n) {
     margin-right:0;
 }
 .home-list > li > .thumb {
