--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
         <h2 class="title">어디에서나, 여행은 살아보는 거야!</h2>
         <div class="page-container">
             <ul class="list">
-                <li th:onclick="'location.href=\''+ @{/list} + '\''">
+                <li th:onclick="'location.href=\''+ @{/home/list} + '\''">
                     <img src="images/page02_1.jpg">
                     <p>자연생활을 만끽할 수 있는 숙소</p>
                 </li>
@@ -65,6 +65,7 @@
                 $('.header-container .logo > img').attr("src", 'images/logo_pk.png');
             } else {
                 $('header').removeClass('scroll');
+                $('.header-container .logo > img').attr("src", 'images/logo_wh.png');
             }
         });
     })
