--- a/src/main/resources/templates/home/add.html
+++ b/src/main/resources/templates/home/add.html
@@ -44,6 +44,10 @@
                 <td><input type="text" name="price"></td>
             </tr>
             <tr>
+                <td>숙소유형</td>
+                <td><input type="text" name="type"></td>
+            </tr>
+            <tr>
                 <td>편의시설</td>
                 <td>
                     <label th:each="facilite : ${facilites}">
