--- a/src/main/resources/templates/home/detail.html
+++ b/src/main/resources/templates/home/detail.html
@@ -60,7 +60,7 @@
             <div class="btn-group">
                 <ul>
                     <li><a th:href="@{/home/edit/{id}(id = ${home.id})}">수정하기</a></li>
-                    <li><a href="">삭제하기</a></li>
+                    <li><a th:href="@{/home/delete/{id}(id = ${home.id})}">삭제하기</a></li>
                 </ul>
             </div>
         </div>
