--- a/src/main/resources/templates/home/list.html
+++ b/src/main/resources/templates/home/list.html
@@ -37,6 +37,7 @@
     <h2 class="title">
         <p>300개의 숙소</p>
         자연생활을 만끽할 수 있는 숙소
+        <a th:href="@{/home/add}">숙소 등록하기</a>
     </h2>
     <ul class="home-list">
         <li th:each="home : ${homes}">
