--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -99,6 +99,9 @@ header {
     grid-row: 3/5;
     border-radius: 0 0 10px 0;
 }
+.main > .info > .images > div:nth-child(n+6) {
+    display: none;
+}
 .main > .info > .images > div > img {
     width:100%;
     height:100%;
