--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -22,6 +22,7 @@ header {
     box-sizing: border-box;
 }
 .main > h2.title {
+    position:relative;
     font-size:32px;
     color:#222;
     font-weight:bold;
@@ -31,6 +32,23 @@ header {
     font-size:14px;
     color:#222;
     margin-bottom:8px;
+}
+.main > h2.title > a {
+    position:absolute;
+    bottom:0;
+    right:0;
+    width:180px;
+    display: inline-block;
+    border-radius: 5px;
+    border:1px solid #999;
+    box-sizing: border-box;
+    text-align:Center;
+    background:#FF385C;
+    border-color: #FF385C;
+    color:#fff;
+    font-weight:bold;
+    line-height:48px;
+    font-size:15px;
 }
 
 
