--- a/src/main/resources/templates/home/detail.html
+++ b/src/main/resources/templates/home/detail.html
@@ -62,6 +62,29 @@
                     <li><a th:href="@{/home/edit/{id}(id = ${home.id})}">수정하기</a></li>
                     <li><a th:href="@{/home/delete/{id}(id = ${home.id})}">삭제하기</a></li>
                 </ul>
+                <div class="book-container">
+                    <div class="top">
+                        <p class="price"><span>₩190,814</span> / 박</p>
+                        <p><i class="fas fa-star"></i>&nbsp;<span class="point">4.94</span>&nbsp;<span class="review-cnt">(후기 <span>65</span>개)</span></p>
+                    </div>
+                    <div class="date-container">
+                        <div class="date-top">
+                            <div class="checkin">
+                                <p>체크인</p>
+                                <div class="date">2022.2.4</div>
+                            </div>
+                            <div class="checkout">
+                                <p>체크아웃</p>
+                                <div class="date">2022.2.4</div>
+                            </div>
+                        </div>
+                        <div class="guest-bot">
+                            <p>인원</p>
+                            <div class="guest">게스트 1명</div>
+                        </div>
+                    </div>
+                    <a href="">예약하기</a>
+                </div>
             </div>
         </div>
     </div>
