--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,7 +5,8 @@ header {
     height:80px;
     padding:10px 80px;
     box-sizing: border-box;
-    -o-transition:all 0.5s ease; -moz-transition:all 0.5s ease; -ms-transition:all 0.5s ease; -webkit-transition:all 0.5s ease; 
+    -o-transition:all 0.5s ease; -moz-transition:all 0.5s ease; -ms-transition:all 0.5s ease; -webkit-transition:all 0.5s ease;
+    background: #fff;
 }
 .header-container {
     position:absolute;
