--- a/src/main/resources/templates/home/detail.html
+++ b/src/main/resources/templates/home/detail.html
@@ -95,6 +95,8 @@
     </div>
 </body>
 <script>
+
+    // 연결 달력
     var date = new Date();
 
     var dp = $('#date_start').datepicker({
@@ -125,5 +127,10 @@
             });
         }
     }).data('datepicker');
+
+
+
+    // 예약 안되는 날짜 비활성화
+
 </script>
 </html>
