--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,99 +1,85 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Aribnb</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <!-- datePicker -->
-    <script src="js/jquery-3.1.1.min.js"></script> <!-- 값 제어를 위해 jquery -->
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/layout-main">
+
+<!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
     <link href="css/datepicker.min.css" rel="stylesheet" type="text/css" media="all">
-    <!-- Air datepicker css -->
-    <script src="js/datepicker.min.js"></script> <!-- Air datepicker js -->
-    <script src="js/datepicker.ko.js"></script> <!-- 달력 한글 추가를 위해 커스텀 -->
-    <!-- 노토산스 -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
-</head>
-<body>
-<header>
-    <div class="header-container">
-        <a href="/" class="logo"><img src="images/logo_wh.png"></a>
-        <ul class="subMenu">
-            <li><a href="#none">호스트 되기</a></li>
-            <li><a href="#none"><i class="fas fa-globe"></i></a></li>
-            <li>
-                <div class="hamburger"><i class="fas fa-bars"></i></div>
-                <div class="person"><i class="fas fa-user-circle"></i></div>
-            </li>
-        </ul>
-    </div>
-</header>
-<div class="main">
+</th:block>
 
-    <!-- page01 -->
-    <div class="page01">
-        <form action="/home/search" method="get">
-            <ul class="search-box">
-                <li>
-                    <p class=title>체크인</p>
-                    <input type="text" id="date_start" class="date" name="startday" placeholder="날짜 입력"/>
-                </li>
-                <li>
-                    <p class=title>체크아웃</p>
-                    <input type="text" id="date_end" class="date" name="endday" placeholder="날짜 입력"/>
-                </li>
-                <li>
-                    <p class=title>인원</p>
-                    <input type="text" name="guestCnt" placeholder="게스트 추가">
-                </li>
-                <li>
-                    <button><i class="fas fa-search"></i></button>
-                </li>
-            </ul>
-        </form>
-    </div>
 
-    <!-- page02 -->
-    <div class="page02 page">
-        <h2 class="title">어디에서나, 여행은 살아보는 거야!</h2>
-        <div class="page-container">
-            <ul class="list">
-                <li th:onclick="'location.href=\''+ @{/home/list} + '\''">
-                    <img src="images/page02_1.jpg">
-                    <p>자연생활을 만끽할 수 있는 숙소</p>
-                </li>
-                <li>
-                    <img src="images/page02_2.jpg">
-                    <p>독특한 공간</p>
-                </li>
-                <li>
-                    <img src="images/page02_3.jpg">
-                    <p>집 전체</p>
-                </li>
-                <li>
-                    <img src="images/page02_4.jpg">
-                    <p>반려동물 동반 가능</p>
-                </li>
-            </ul>
+<div layout:fragment="content">
+
+    <div class="main">
+
+        <!-- page01 -->
+        <div class="page01">
+            <form action="/home/search" method="get">
+                <ul class="search-box">
+                    <li>
+                        <p class=title>체크인</p>
+                        <input type="text" id="date_start" class="date" name="startday" placeholder="날짜 입력"/>
+                    </li>
+                    <li>
+                        <p class=title>체크아웃</p>
+                        <input type="text" id="date_end" class="date" name="endday" placeholder="날짜 입력"/>
+                    </li>
+                    <li>
+                        <p class=title>인원</p>
+                        <input type="text" name="guestCnt" placeholder="게스트 추가">
+                    </li>
+                    <li>
+                        <button><i class="fas fa-search"></i></button>
+                    </li>
+                </ul>
+            </form>
+        </div>
+
+        <!-- page02 -->
+        <div class="page02 page">
+            <h2 class="title">어디에서나, 여행은 살아보는 거야!</h2>
+            <div class="page-container">
+                <ul class="list">
+                    <li th:onclick="'location.href=\''+ @{/home/list} + '\''">
+                        <img src="images/page02_1.jpg">
+                        <p>자연생활을 만끽할 수 있는 숙소</p>
+                    </li>
+                    <li>
+                        <img src="images/page02_2.jpg">
+                        <p>독특한 공간</p>
+                    </li>
+                    <li>
+                        <img src="images/page02_3.jpg">
+                        <p>집 전체</p>
+                    </li>
+                    <li>
+                        <img src="images/page02_4.jpg">
+                        <p>반려동물 동반 가능</p>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
-<script>
-    $(document).ready(function () {
+    <script>
+        $(document).ready(function () {
 
-        var bodyOffset = jQuery('body').offset();
-        $(window).scroll(function() { // 윈도우 스크롤 이벤트 시
-            if ($(document).scrollTop() > bodyOffset.top) {
-                $('header').addClass('scroll');
-                $('.header-container .logo > img').attr("src", 'images/logo_pk.png');
-            } else {
-                $('header').removeClass('scroll');
-                $('.header-container .logo > img').attr("src", 'images/logo_wh.png');
-            }
+            var bodyOffset = jQuery('body').offset();
+            $(window).scroll(function() { // 윈도우 스크롤 이벤트 시
+                if ($(document).scrollTop() > bodyOffset.top) {
+                    $('header').addClass('scroll');
+                    $('.header-container .logo > img').attr("src", 'images/logo_pk.png');
+                } else {
+                    $('header').removeClass('scroll');
+                    $('.header-container .logo > img').attr("src", 'images/logo_wh.png');
+                }
+            });
         });
-    });
-</script>
-</body>
-<script src="/js/airDaypicker.js"></script>
-</html>
+    </script>
+
+    <!-- index.html 고유 스크립트 추가 -->
+    <th:block layout:fragment="script">
+        <script src="/js/airDaypicker.js"></script>
+    </th:block>
+</div>
